--- a/Hobbies.html
+++ b/Hobbies.html
@@ -7,7 +7,7 @@
   <body>
     <h2>Hobbies:</h2>
     <p><ul><li>Watching Movies,Anime and Drama.</li><li>Playing Chess.</li><li>Listening Music.</li><li>Riding Motorcycle.</li></ul></p>
-    <form class="" action="mailto:hemanthbannu06@gmail.com" method="post" enctype="text/plain">
+    <form class="" action="intel.html" method="post" enctype="text/plain">
       <table>
         <tr>
           <td><label>Your Name: </label></td>
