--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <hr>
     <a href="Hobbies.html"><h3>Hobbies</h3></a>
     <hr>
-    <h3>Year of Study:</h3>
+    <h3>Year of Graduation:</h3>
     <table cellspacing="30">
       <tr>
         <th>Year</th>
@@ -56,6 +56,10 @@
         <td>⭐⭐⭐</td>
         <td>Car Driving:</td>
         <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Python:</td>
+        <td>⭐⭐</td>
       </tr>
     </table>
     <hr size="3" noshade>
