--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <hr>
     <h3>Study:</h3>
     <P>School: <strong>SPVN</strong>.<br>Inter: <strong>Sri Chaitanya</strong>.
-      <br>College: <strong><a href="https://vce.ac.in/">Vasavi College of Engineering</a></strong>.</P>
+      <br>College: <strong>Vasavi College of Engineering</strong>.</P>
     <hr>
     <a href="Hobbies.html"><h3>Hobbies</h3></a>
     <hr>
