--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
         <li>Roll no :- <strong>1602-19-735-013</strong>.</li></ol></p>
     <hr>
     <h3>Study:</h3>
-    <P>School: <strong>SPVN</strong>.<br>Inter: <strong>Sri Chaitanya</strong>.
-      <br>College: <strong>Vasavi College of Engineering</strong>.</P>
+    <table>
+      <tr>
+        <td>School:</td>
+        <td><strong>SPVN</strong>.</td>
+      </tr>
+      <tr>
+        <td>Inter::</td>
+        <td><strong><strong>Sri Chaitanya</strong>.</strong></td>
+      </tr>
+      <tr>
+        <td>College:</td>
+        <td><strong><strong>Vasavi College of Engineering</strong>.</td>
+      </tr>
+    </table>
     <hr>
     <a href="Hobbies.html"><h3>Hobbies</h3></a>
     <hr>
