--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <li>Roll no :- <strong>1602-19-735-013</strong>.</li></ol></p>
     <hr>
     <h3>Study:</h3>
-    <table>
+    <table cellspacing="20">
       <tr>
         <td>School:</td>
         <td><strong>SPVN</strong>.</td>
       </tr>
       <tr>
-        <td>Inter::</td>
+        <td>Inter:</td>
         <td><strong><strong>Sri Chaitanya</strong>.</strong></td>
       </tr>
       <tr>
