--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <hr size="3" noshade>
     <h3>Biodata:</h3>
     <p><ol type="i">
-      <li>My name is <strong><em>Hemanth</em></strong>.</li><br><li>I'm Studying in <strong><a href="https://vce.ac.in/">Vasavi College of Engineering</a></strong>.</li>
-        <br><li>Roll no :- <strong>1602-19-735-013</strong>.</li></ol></p>
+      <li>My name is <strong><em>Hemanth</em></strong>.</li>
+      <br>
+      <li>I'm Studying in <strong><a href="https://vce.ac.in/">Vasavi College of Engineering</a></strong>.</li>
+      <br>
+      <li>Roll no :- <strong>1602-19-735-013</strong>.</li></ol></p>
     <hr>
     <h3>Study:</h3>
     <table cellspacing="20">
