--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </table>
     <hr size="3" noshade>
     <h3>Biodata:</h3>
-    <p><ol type="i">
+    <p><ul>
       <li>My name is <strong><em>Hemanth</em></strong>.</li>
       <br>
       <li>I'm Studying in <strong><a href="https://vce.ac.in/">Vasavi College of Engineering</a></strong>.</li>
       <br>
-      <li>Roll no :- <strong>1602-19-735-013</strong>.</li></ol></p>
+      <li>Roll no :- <strong>1602-19-735-013</strong>.</li></ul></p>
     <hr>
     <h3>Study:</h3>
     <table cellspacing="20">
