--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Hemanth Blog</title>
   </head>
+  <link rel="stylesheet" href="styles.css">
   <body>
     <table cellspacing="20">
       <tr>
@@ -11,7 +12,7 @@
         <td><h1>Hemanth Bio</h1></td>
       </tr>
     </table>
-    <hr size="3" noshade>
+    <hr>
     <h3>Biodata:</h3>
     <p><ul>
       <li>My name is <strong><em>Hemanth</em></strong>.</li>
@@ -35,8 +36,8 @@
         <td><strong><strong>Vasavi College of Engineering</strong>.</td>
       </tr>
     </table>
-    <hr>
     <a href="Hobbies.html"><h3>Hobbies</h3></a>
+    <br>
     <hr>
     <h3>Year of Graduation:</h3>
     <table cellspacing="30">
@@ -77,6 +78,5 @@
         <td>⭐⭐</td>
       </tr>
     </table>
-    <hr size="3" noshade>
   </body>
 </html>
